# CAALM

./: .gitignore  CHANGELOG.md  CITATION.cff  README.md  pyproject.toml
scripts/: predict_example.sh
src/: caalm.py  level2.py  predict.py
src/caalm/: __init__.py  classifier.py  cli.py  io.py  pipeline.py  predict.py  predictor.py  retrieval.py  types.py  utils.py  visualize.py
src/caalm/templates/: report.html
