[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "caalm"
version = "1.0.0"
description = "Carbohydrate Activity Annotation with protein Language Models"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Licheng Zong", email = "lczong@cuhk.edu.hk" },
]
requires-python = ">=3.10"
dependencies = [
    "tqdm>=4.67",
    "numpy>=1.26",
    "biopython>=1.86",
    "torch>=2.6.0",
    "transformers>=4.55.0,<5",
    "pyyaml>=6.0",
    "jinja2>=3.1",
    "markupsafe>=2.0",
]

[project.optional-dependencies]
cpu = ["faiss-cpu>=1.7"]

[project.scripts]
caalm = "caalm.predict:main"

[tool.setuptools.packages.find]
where = ["src"]
