[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "caalm"
version = "1.0.0"
description = "Carbohydrate Activity Annotation with protein Language Models"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Licheng Zong", email = "lczong@cuhk.edu.hk" },
]
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies = [
    "tqdm>=4.67",
    "numpy>=1.26",
    "biopython>=1.86",
    "torch>=2.6.0",
    "transformers>=4.55.0,<5",
    "pyyaml>=6.0",
    "jinja2>=3.1",
    "markupsafe>=2.0",
]

[project.urls]
Homepage = "https://github.com/lczong/CAALM"
Repository = "https://github.com/lczong/CAALM"
Issues = "https://github.com/lczong/CAALM/issues"

[project.optional-dependencies]
cpu = ["faiss-cpu>=1.7"]

[project.scripts]
caalm = "caalm.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
